# pySigma-backend-insightidr

./: pyproject.toml
.github/workflows/: release.yml  test.yml
sigma/backends/insight_idr/: __init__.py  insight_idr.py
sigma/pipelines/insight_idr/: __init__.py  insight_idr.py
tests/: test_backend_insight_idr.py  test_insight_idr_pipeline.py
