[tool.poetry]
name = "pysigma-backend-insightidr"
version = "0.2.3"
description = "pySigma Rapid7 InsightIDR backend"
readme = "README.md"
authors = ["Micah Babinski <m.babinski.88@gmail.com>"]
license = "LGPL-2.1-only"
repository = "https://github.com/SigmaHQ/pySigma-backend-insightidr"
packages = [
    { include = "sigma" }
]

[tool.poetry.dependencies]
python = "^3.8"
pysigma = "^0.11"

[tool.poetry.dev-dependencies]
black = "^24.1"
coverage = "^7.4"
defusedxml = "^0.7"
pytest = "^8.0"
pytest-cov = "^4.1"

[build-system]
requires = ["poetry-core>=1.8.1"]
build-backend = "poetry.core.masonry.api"